--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>Slide 1
+				<p>Go to <a href="https://github.com/avikdatta/reveljs_slides_test">Home</a></p>
+				</section>
+				<section>Slide 2
+				<p>Go to <a href="https://github.com/avikdatta/reveljs_slides_test">Home</a></p>
+				</section>
+
 			</div>
 		</div>
 
